<resources>
    <string name="CARGANDO">Cargando</string>
    <string name="PROGRESS_DIALOG_MENSAJE_GENERAL">Estamos procesando tu solicitud</string>
    <string name="TITULO_ERROR">Error</string>
    <string name="app_name">Ámate</string>
    <string name="title_info_dialog">Información</string>
    <string name="title_error_dialog">Error</string>
    <string name="profile_completed">Por favor completa todo tu perfil antes de continuar. Si ya lo hiciste sólo presiona el botón (OK) y luego el botón (GUARDAR).</string>
    <string name="network_not_available">No tiene conexión a internet y es necesario para que puedas continuar, verifica tu conexión y vuelve a intentarlo.</string>
    <string name="years">%1$s años</string>
    <string name="cervix">CERVIX</string>
    <string name="breast">BREAST</string>
    <string name="login">Ingresar</string>
    <string name="sign_up">Crea una nueva cuenta. Regístrate</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico (ejemplo@ejemplo.com)</string>
    <string name="nombre_usuario">Nombres</string>
    <string name="apellido_usuario">Apellidos</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="tienes_cuenta">¿Ya tienes una cuenta? Ingresa</string>
    <string name="title_activity_maps">Map</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
    <string name="resetPasswordSuccessful">Te hemos enviado un correo electrónico con los pasos para cambiar tu contraseña</string>
    <string name="sigUpSuccessful">Se ha creado tu usuario correctamente.</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="gift">Premios</string>
    <string name="main_fragmen_learn">Aprende sobre</string>
    <string name="fragment_main_gift">Reclama tu premio</string>
    <string name="btn_breast_cancer">Aprende sobre el <strong>cáncer de seno</strong></string>
    <string name="btn_cervical_cancer">Aprende sobre el <strong>cáncer de cuello uterino</strong></string>
    <string name="btn_take_gift">Puntuaciones</string>
    <string name="birth">Fecha de nacimiento (dd/mm/aaaa)</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="address">Dirección</string>
    <string name="neighborhood">Barrio</string>
    <string name="phone">Número fijo</string>
    <string name="age">Edad</string>
    <string name="facebook_app_id">1953791061527563</string>
    <string name="fb_login_protocol_scheme">fb1953791061527563</string>
    <string name="fb_texto_ingreso">Ingresar con Facebook</string>
    <string name="logout">Cerrar sesión</string>
    <string name="map">Dirección</string>
    <string name="get_address">Aceptar</string>
    <string name="save">Guardar</string>
    <string name="person_height">Estatura (metros) ejemplo: 1.67</string>
    <string name="person_weight">Peso (kilos) ejemplo: 60</string>
    <string name="person_childs">¿Cuántos hijos tienes?</string>
    <string name="title_profile">Perfil Usuario</string>
    <string name="selecciona_fecha_nac">Selecciona una fecha</string>
    <string name="NO_ACEPTADO_PERMISOS">Por favor acepta los permisos para poder saber tu ubicación</string>
    <string name="enable_gps">Activación del GPS</string>
    <string name="content_enable_gps">¿Deseas ir activar el GPS para ubicar mejor tu posición en el mapa?</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="intro_cervical"> <strong>¿Sabías que el cáncer de cuello uterino se puede prevenir?</strong> \n\n
        Aprender sobre él te permitirá vivir más y mejor \n\n Ámate, cuida tu salud</string>
    <string name="intro_breast"> <strong>¿Sabías que el cáncer de seno se puede detectar tempranamente?</strong> \n\n
        Aprender sobre él te permitirá vivir más y mejor \n\n Ámate, cuida tu salud</string>
    <string name="title_question">Pregunta:</string>
    <string name="btn_test_knowledge">Prueba tu conocimiento</string>
    <string name="get_questions">Cargando las preguntas</string>
    <string name="no_db_questions">No hay pregutas disponibles por favor vuelva a ingresar</string>
    <string name="question_points">PUNTOS</string>
    <string name="height_min_msg">La altura debe ser mayor a 1.30 metros</string>
    <string name="height_max_msg">La altura debe ser menor a 2.20 metros</string>
    <string name="weight_min_msg">El peso debe ser mayor a 30 Kilogramos</string>
    <string name="weight_max_msg">El peso debe ser menor a 200 Kilogramos</string>
    <string name="neighborhood_no_empty_msg">El barrio es obligatorio</string>
    <string name="phone_no_empty_msg">El telefono es necesario para reclamar tus premio</string>
    <string name="child_max_msg">El número de hijos debe ser menor a 20</string>
    <string name="email_validation_msg">El correo electrónico no es valido</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="points">Puntos</string>
    <string name="get_to_gift">Reclama tu premio</string>
    <string name="title_points">"Puntos acumulados \n"</string>
    <string name="points_additional">¿Sabes si debes hacerte la mamografía o la citología vaginal? Nosotros te podemos ayudar.
        Haz click en el botón y si tienes indicación de hacerte la mamografía o
        citología vaginal y cumples con la cita de tu examen, recibirás:</string>
    <string name="fail">¡Incorrecto!</string>
    <string name="right">¡Correcto!</string>
    <string name="firs_total_points">Has obtenido %1$s punto(s) en este intento, los sumaremos al total de puntos acumulados.</string>
    <string name="turn_to_next_Oportunity">En %1$s días tendrás otra oportunidad de probar tu conocimiento y lo que has aprendido para subir tu puntuación.</string>
    <string name="thanks_for_answers">Gracias por responder</string>
    <string name="end_turn">Se agotaron tus oportunidades para contestar, por favor continua con el otro módulo.</string>
    <string name="end_all_turn">¡Felicitaciones has completado todos los módulos, ahora puedes ver tu nivel de conocimiento en Puntuaciones!</string>
    <string name="lapse_answer">Tendrás otra oportunidad de responder este módulo en %d día(s). Vuelve a intentarlo para seguir aprendiendo e incrementar tus puntos y ganar mejores premios.</string>
    <string name="error_nested">Error: sin configurar pregunta anidada.</string>
    <string-array name="head_table">
        <item>Puntos</item>
        <item>Nivel de conocimiento</item>
    </string-array>
    <string name="title_table">Catálogo de puntos y premios</string>
    <string name="title_appointment">¡Recarga por cuidar tu salud!</string>
    <string name="answer_label">respuesta</string>
    <string name="nested_label">anidada</string>
    <string name="password_enable">Ver Password</string>
    <string name="final_thanks">¡Gracias por usar nuestra app!</string>
    <string name="warning_answers">¡Cuidado!</string>
    <string name="congratulation">¡Felicitaciones!</string>
    <string name="intro_ms_gift">Ahora sabes lo importante que es hacerte la mamografía y la citología vaginal para detectar a tiempo el cáncer de seno y prevenir el cáncer de cuello uterino.</string>
    <string name="warning_git1">Independiente de tu edad si tienes alguna masa, dolor, salida de líquido o molestia en el seno debes consultar al médico.</string>
    <string name="warning_git2">Sangrados vaginales anormales o dolor vaginal también requieren que consultes al médico.</string>
    <string name="warning_git3">Esta aplicación no receta, diagnostica o formula tratamientos ni reemplaza la consulta con un médico.</string>
    <string name="warning_link">Para más información contáctanos en:\namate@pfccap.org</string>
    <string name="title_warning">¡Importante!</string>
    <string name="mammography">mamografía</string>
    <string name="vaginal_cytology">citología vaginal</string>
    <string name="message_validation_no_gift">Y recuerda siempre:\n\n
 1. Evitas el cáncer cuando contralas el consumo de licor, dejas de fumar y tienes sexo CON condón.\n\n
 2. Y la vacuna contra el virus del papiloma humano te protege contra el cáncer de cuello uterino.</string>
    <string name="message_validation_yes_gift">De acuerdo a tus respuestas tienes indicación de %1$s.\n\nIngresa el código que te asignaron para reclamar tu premio.</string>
    <string name="points_and_thanks_gift">Tus puntos acumulados son:\n\n%1$s\n\nEn el transcurso del día llegará tu premio correspondiente a la recarga.\n\n¡Muchas gracias por tu \nparticipación!</string>
    <string name="message_validation_yes">De acuerdo a tus respuestas debes hacerte el examen de %1$s. Una vez hagas tu examen pide el código para reclamar tu premio.</string>
    <string name="have_opportunities_breast_days">Podrás incrementar tus puntos en %1$s días. Regresa con más puntos para un mejor premio.</string>
    <string name="have_opportunities_cervix_days">Podrás incrementar tus puntos en %1$s días. Regresa con más puntos para un mejor premio.</string>
    <string name="have_opportunities">Debes contestar el cuestionario de cada módulo antes de reclamar tu premio.</string>
    <string name="have_opportunities_breast">Tienes otra oportunidad en el módulo cáncer de seno para mejorar tu puntuación.</string>
    <string name="have_opportunities_cervix">Tienes otra oportunidad en el módulo cáncer de cuello uterino para mejorar tu puntuación.</string>
    <string name="weak_password">WEAK_PASSWORD</string>
    <string name="error_user_not_found">No existe este usuario con este correo electrónico, por favor verifique.</string>
    <string name="error_invalid_email">El ema il registrado no es válido, por favor verifique.</string>
    <string name="error_wrong_password">El usuario o la contraseña es incorrecta.</string>
    <string name="error_user_disabled">El usuario se encuentra deshabilitado.</string>
    <string name="error_email_already_in_use">Este usuario ya existe.</string>
    <string name="error_operation_not_allowed">El correo electrónico y contraseña no están habilitado. Habilítelo en la consola de Firebase.</string>
    <string name="error_weak_password">La contraseña es muy débil, digite una combinación más compleja.</string>
    <string name="weak_password_second">La contraseña es débil, digite más de 6 letras o números.</string>
    <string name="terms_check_validation_message">Debe aceptar los términos y condiciones</string>
    <string name="privacy_check_validation_message">Debe aceptar las políticas de privacidad</string>
    <string name="no_permission_my_location">No tiene permisos de localización, no podrás saber tu posición actual automáticamente.</string>
    <string name="done_get_gift">Ya has solicitado tu premio de %1$s.\n\nSigue atenta con nuestra aplicación para nuevas oportunidades de probar tu conocimiento y aprender. Y recuerda… ¡Ámate cuida tu salud!</string>
    <string name="error_with_network">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="error_with_network_spanish">Hay problemas de conección con el internet, por favor verifica tu conexión y vuelve a intenarlo.</string>
    <string name="create_gmail_acount">No tienes una cuenta de correo electrónico creala aquí.</string>
    <string name="field_only_alphabets">Este campo solo acepta letras</string>
    <string name="limits_phone_number">Debe tener 7 números</string>
    <string name="finish">Finalizar</string>
    <string name="who_is">¿Quienes Somos?</string>
    <string name="codigo_citologia">Código Citología</string>
    <string name="codigo_mamografia">Código mamografía</string>
    <string name="send">Enviar</string>
</resources>