<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_drawer_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_48dp"/>
        <item
            android:id="@+id/item_drawer_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_face_profile_black_48dp"/>
        <item
            android:id="@+id/item_drawer_gifts"
            android:title="@string/btn_take_gift"
            android:icon="@drawable/ic_cupwinners"/>

        <item
            android:id="@+id/item_who_is"
            android:title="@string/who_is"
            android:icon="@mipmap/ic_barra_amate"/>

        <!--item
            android:id="@+id/item_drawer_invite"
            android:title="@string/invite"
            android:icon="@drawable/ic_compartir_nav"/-->
    </group>
</menu>