<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="org.pfccap.education.presentation.main.ui.fragments.WarningFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@drawable/logo_amate"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gift_txt_warning_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/alert"
                android:gravity="center"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/title_warning"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/gift_txt_warning_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWarning"
                android:padding="10dp"
                android:text="@string/warning_git1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gift_txt_warning_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWarning"
                android:padding="10dp"
                android:text="@string/warning_git2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gift_txt_warning_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWarning"
                android:padding="10dp"
                android:text="@string/warning_git3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gift_txt_warning_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/warning_link"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
